[gd_scene load_steps=5 format=3 uid="uid://7u2ie6actdx5"]

[ext_resource type="Script" uid="uid://dcm6r0bm0gnn2" path="res://main.gd" id="1_0xm2m"]
[ext_resource type="PackedScene" uid="uid://dr8ueyfu2v4ly" path="res://reel.tscn" id="1_ig7tw"]
[ext_resource type="Script" uid="uid://bsthdrokptiup" path="res://slot/slot_manager.gd" id="3_h2yge"]
[ext_resource type="Resource" uid="uid://4oq0fbm8fr5a" path="res://slot/default_slot_config.tres" id="4_1bvp3"]

[node name="Main" type="Node2D" node_paths=PackedStringArray("slot_manager")]
script = ExtResource("1_0xm2m")
slot_manager = NodePath("SlotManager")

[node name="Reel1" parent="." groups=["slot_reel"] instance=ExtResource("1_ig7tw")]
offset_left = 20.0
offset_top = 80.0
offset_right = 100.0
offset_bottom = 260.0

[node name="Reel2" parent="." groups=["slot_reel"] instance=ExtResource("1_ig7tw")]
offset_left = 120.0
offset_top = 80.0
offset_right = 200.0
offset_bottom = 260.0

[node name="Reel3" parent="." groups=["slot_reel"] instance=ExtResource("1_ig7tw")]
offset_left = 220.0
offset_top = 80.0
offset_right = 300.0
offset_bottom = 260.0

[node name="SpinButton" type="Button" parent="."]
offset_left = 20.0
offset_top = 280.0
offset_right = 300.0
offset_bottom = 311.0
text = "SPIN"

[node name="CreditsLabel" type="Label" parent="."]
offset_left = 30.0
offset_top = 30.0
offset_right = 121.0
offset_bottom = 53.0
text = "Credits: 100"

[node name="ResultLabel" type="Label" parent="."]
offset_left = 180.0
offset_top = 30.0
offset_right = 220.0
offset_bottom = 53.0

[node name="SlotManager" type="Node" parent="." node_paths=PackedStringArray("reels")]
script = ExtResource("3_h2yge")
config = ExtResource("4_1bvp3")
reels = [NodePath("../Reel1"), NodePath("../Reel2"), NodePath("../Reel3")]
